...
            android:theme="@style/AppTheme.Toolbar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/app_name"
            app:titleTextAppearance="@style/AppTheme.Toolbar.Title">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:maxWidth="1000dp"
                android:theme="@style/AppTheme.SearchView"
                app:iconifiedByDefault="true"
...
            android:layout_marginBottom="-7dp"
            android:indeterminate="true"
            android:visibility="gone" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvAlbums"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</android.support.design.widget.CoordinatorLayout>
